@@ -27,6 +27,7 @@ dependencies {
   implementation(Config.Libs.slf4j)
   implementation(Config.Libs.logback_classic)
   implementation(Config.Libs.logback_core)
+
   implementation(Config.Libs.groovy) // For logback
   // implementation(Config.Libs.protobuf)
   implementation(Config.Libs.grpc_core)
@@ -38,8 +39,8 @@ dependencies {
   implementation(Config.Libs.pubsub)
   // implementation(Config.Libs.storage)
   // implementation(Config.Libs.rocksdb)
-  implementation("io.opencensus:opencensus-exporter-trace-stackdriver:0.26.0")
-  implementation("io.opencensus:opencensus-contrib-zpages:0.26.0")
+  implementation("io.opencensus:opencensus-exporter-trace-stackdriver:0.28.3")
+  implementation("io.opencensus:opencensus-contrib-zpages:0.28.3")
 
   // AutoValue
   compileOnly("com.google.auto.value:auto-value-annotations:1.6.2")
@@ -86,24 +87,40 @@ tasks.register<Jar>("spannerTailerService") {
   })
 }
 
+val project_id = System.getenv().getOrDefault("PROJECT_ID", "rcs-demo-prod")
+
 application {
   mainClassName = "com.google.spez.cdc.Main"
   applicationDefaultJvmArgs = listOf(
-    "-Dspez.auth.cloud_secrets_dir=/home/pdex/repos/spez2/secrets",
-
-    "-Dspez.project_id=spanner-event-exporter",
+    "-Dspez.auth.cloud_secrets_dir=${rootProject.projectDir}/secrets",
+    "-Dspez.project_id=$project_id",
     "-Dspez.auth.credentials=credentials.json",
     "-Dspez.pubsub.topic=spez-ledger-topic",
-    "-Dspez.sink.instance=spez-test-instance",
-    "-Dspez.sink.database=spez-test-database",
-    "-Dspez.sink.table=test",
-    "-Dspez.sink.uuid_column=Id",
+    "-Dspez.sink.instance=example-event-sink-instance",
+    "-Dspez.sink.database=example-event-sink-database",
+    "-Dspez.sink.table=example",
+    "-Dspez.sink.uuid_column=uuid",
     "-Dspez.sink.timestamp_column=CommitTimestamp",
     "-Dspez.lpts.instance=spez-lpts-instance",
     "-Dspez.lpts.database=spez-lpts-database",
     "-Dspez.lpts.table=lpts",
     "-Dspez.loglevel.default=INFO",
-    "-Dspez.loglevel.com.google.spez.core.EventPublisher=DEBUG"
-
+    "-Dspez.loglevel.com.google.spez.core.EventPublisher=INFO",
+    "-Djava.net.preferIPv4Stack=true",
+    "-Dio.netty.allocator.type=pooled",
+    "-XX:+UnlockExperimentalVMOptions",
+    "-XX:+UseZGC",
+    "-XX:ConcGCThreads=4",
+    "-XX:+UseTransparentHugePages",
+    "-XX:+UseNUMA",
+    "-XX:+UseStringDeduplication",
+    "-XX:+HeapDumpOnOutOfMemoryError",
+    "-Dcom.sun.management.jmxremote",
+    "-Dcom.sun.management.jmxremote.port=9010",
+    "-Dcom.sun.management.jmxremote.rmi.port=9010",
+    "-Dcom.sun.management.jmxremote.local.only=false",
+    "-Dcom.sun.management.jmxremote.authenticate=false",
+    "-Dcom.sun.management.jmxremote.ssl=false",
+    "-Djava.rmi.server.hostname=127.0.0.1"
   )
 }
